# dianadb

./: .gitignore  Cargo.toml  Makefile  README.md  addresses.txt
demo/lan/: Cargo.toml
demo/lan/src/: client.rs  server.rs
scripts/: Makefile  cluster.py  fetch.sh  manage.py  sync.sh
src/: client.rs  dianadb.rs  main.rs  server.rs  util.rs
